--- a/17.3_activities/03_One_Page_Website/index.html
+++ b/17.3_activities/03_One_Page_Website/index.html
@@ -12,5 +12,8 @@
         <div class="leftside">
             <div id="image">Tsion Kidane</div> 
         </div>
+        <div class="leftside">
+            <div id="image">Tsion Kidane</div> 
+        </div>
     </body>
 </html>
