--- a/18.2-activities/solved/index.html
+++ b/18.2-activities/solved/index.html
@@ -14,7 +14,7 @@
       <p>Rest</p>
       <p>Decoration</p>
       <p>Outdoor</p>
-      <p>Magazine
+      <p>Magazine</p>
       <p>Outlet</p>
     </div>
     <div class="icons">
